keep environments folder

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,11 @@
 *.iws
 .idea/
 .DS_Store
-environments/
+
+# Environments
+/environments/*
+env.*
+*.env
+
+# keep environments dir itself
+!environments/.gitkeep
